deployment-service-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egress-test
  labels:
    app: egress-test
  namespace: ecaas
spec:
  replicas: 1
  template:
    metadata:
      name: egress-test
      labels:
        app: egress-test
      namespace: ecaas
    spec:
      containers:
        - name: egress-test
          image: artifacts.aa.com/docker-all/egress-test:k8
  selector:
    matchLabels:
      app: egress-test
---
apiVersion: v1
kind: Service
metadata:
  name: egress-service
  namespace: ecaas
spec:
  selector:
    app: egress-test
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"egress-ingress","namespace":"ecaas"},"spec":{"rules":[{"host":"egress.drke.ok8s.aa.com","http":{"paths":[{"backend":{"serviceName":"egress-service","servicePort":80}}]}}]}}
  name: egress-ingress
  namespace: ecaas
spec:
  rules:
  - host: egress.drke.ok8s.aa.com
    http:
      paths:
      - backend:
          serviceName: egress-service
          servicePort: 5000
status:
  loadBalancer: {}
